# cpp-gui-template-sdl2-opengl

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  README.md  template.sublime-project
.github/workflows/: cmake.yml  release.yml
cmake/: AppleBuild.cmake  CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  UniversalAppleBuild.cmake
docs/: Dependencies.md  MakeItYourOwn.md  Packaging.md  Profiling.md  QuickStart.md  README.md
packaging/: CMakeLists.txt
packaging/icons/: icon.icns
src/app/: CMakeLists.txt
src/app/App/: Main.cpp
src/app/cmake/packaging/: Darwin.cmake
src/core/: CMakeLists.txt
src/core/Core/: Application.cpp  Application.hpp  DPIHandler.hpp  Instrumentor.hpp  Log.cpp  Log.hpp  Resources.cpp  Resources.hpp  Window.cpp  Window.hpp
src/core/Platform/Linux/: DPIHandler.cpp
src/core/Platform/Mac/: DPIHandler.cpp
src/core/Platform/Windows/: DPIHandler.cpp
